# bim-demo-api

./: .gitignore  CLAUDE.md  pyproject.toml  vercel.json
data/: IFC_Processing.txt  ZHA-B-BWK-C-HR-R18.wld3  ZHA-B-BWK-C-MR-R18.wld3
docs/: api-reference.md
results/: APP-001.json  APP-002.json  APP-003.json  CAAS-20260524-JUG5P.json
scripts/: analysis_result.py
src/iep/: config.py
src/iep/api/: main.py  processing.py
src/iep/ifc/: facade.py  gfa.py  loader.py  shell.py
src/iep/models/: errors.py  request.py  response.py  shell.py
src/iep/reports/: pdf.py
src/iep/scripts/: extract_shell.py
