[project]
name = "iep"
version = "0.1.0"
description = "iEP processing backend — BIM shell extraction and aviation safety assessment for CAAS SkySAFE 2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ifcopenshell",
    "trimesh",
    "shapely",
    "numpy",
    "pydantic>=2",
    "loguru",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "reportlab>=4.5.1",
]

[project.scripts]
iep-extract-shell = "iep.scripts.extract_shell:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iep"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
